--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "npm run build:css && remix build",
+    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "start": "remix-serve build"
   },
   "dependencies": {
@@ -14,7 +16,7 @@
     "@remix-run/react": "^1.3.5",
     "@remix-run/serve": "^1.3.5",
     "dotenv": "^16.0.0",
-    "firebase": "^9.6.10",
+    "firebase": "^9.7.0",
     "firebase-admin": "^10.0.2",
     "needle": "^3.1.0",
     "react": "^17.0.2",
@@ -23,7 +25,11 @@
   "devDependencies": {
     "@remix-run/dev": "^1.3.5",
     "@remix-run/eslint-config": "^1.3.5",
-    "eslint": "^8.11.0"
+    "autoprefixer": "^10.4.7",
+    "concurrently": "^7.1.0",
+    "eslint": "^8.11.0",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   },
   "engines": {
     "node": ">=14"
