--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remix-template-remix",
+  "name": "remix-template-vercel",
   "private": true,
   "description": "",
   "license": "",
@@ -14,7 +14,8 @@
   "dependencies": {
     "@remix-run/node": "^1.3.5",
     "@remix-run/react": "^1.3.5",
-    "@remix-run/serve": "^1.3.5",
+    "@remix-run/vercel": "^1.4.3",
+    "@vercel/node": "^1.14.0",
     "dotenv": "^16.0.0",
     "firebase": "^9.7.0",
     "firebase-admin": "^10.0.2",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.3.5",
     "@remix-run/eslint-config": "^1.3.5",
+    "@remix-run/serve": "^1.3.5",
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.1.0",
     "eslint": "^8.11.0",
